--- a/repos.yml
+++ b/repos.yml
@@ -1,2 +1,36 @@
-- Floppy/bimble-test
-- Floppy/carbon-diet
+- theodi/open-orgn-services
+- theodi/services-manager
+- theodi/member-directory
+- theodi/office-calendar
+- theodi/dashboards
+- theodi/git-data-viewer
+- theodi/percentervals
+- theodi/pinboard-harvester
+- theodi/open-data-certificate
+- theodi/bimble
+- theodi/forkbomb
+- theodi/coopy-ruby
+- theodi/alternate-rails
+- theodi/signonotron2
+- theodi/static
+- theodi/panopticon
+- theodi/publisher
+- theodi/asset-manager
+- theodi/content_api
+- theodi/alternate-rails
+- theodi/asset-manager
+- theodi/breasal
+- theodi/buildmemes
+- theodi/csv-profiler
+- theodi/data_kitten
+- theodi/frontend-www
+- theodi/juvia_rails
+- theodi/gds-api-adapters
+- theodi/metrics-api
+- theodi/odi_content_models
+- theodi/odidown
+- theodi/odlifier
+- theodi/philbot
+- theodi/datapackage.rb
+- theodi/csvlint
+- theodi/csvlint.rb
