Add git data publisher

--- a/repos.yml
+++ b/repos.yml
@@ -4,6 +4,7 @@
 - theodi/office-calendar
 - theodi/dashboards
 - theodi/git-data-viewer
+- theodi/git-data-publisher
 - theodi/percentervals
 - theodi/pinboard-harvester
 - theodi/open-data-certificate
