--- a/repos.yml
+++ b/repos.yml
@@ -1,4 +1,5 @@
 - theodi/open-orgn-services
+- theodi/odi-metrics-tasks
 - theodi/services-manager
 - theodi/member-directory
 - theodi/office-calendar
